[gd_scene load_steps=19 format=3 uid="uid://c3erjqtrfd8ws"]

[ext_resource type="Script" uid="uid://cdmph3y8s333" path="res://hud.gd" id="1_37p78"]
[ext_resource type="Texture2D" uid="uid://dbut8742jqxc7" path="res://textures/energySpendingSprite.png" id="2_64ctp"]
[ext_resource type="Texture2D" uid="uid://b6ab30a3d4p0l" path="res://itemBox/Boost.png" id="3_640wx"]
[ext_resource type="Texture2D" uid="uid://dt7xhcn14tqvy" path="res://itemBox/Empty.png" id="4_a2258"]
[ext_resource type="Texture2D" uid="uid://b6tqk7jvhx0b3" path="res://itemBox/FreezeSprite.png" id="5_1xsix"]
[ext_resource type="Texture2D" uid="uid://b7n2bw1kgnyst" path="res://itemBox/Phaze.png" id="5_a2258"]
[ext_resource type="Texture2D" uid="uid://dgiyqqaeqfx6v" path="res://textures/iceOverlayAsFreeze.jpg" id="7_rftc2"]
[ext_resource type="Texture2D" uid="uid://3fx8k1u3667" path="res://BackgroundImags.jpg" id="8_61f8s"]
[ext_resource type="Environment" uid="uid://buubymy307ee0" path="res://materials/defaultEnvironment.tres" id="9_g10ll"]

[sub_resource type="AtlasTexture" id="AtlasTexture_64ctp"]
atlas = ExtResource("2_64ctp")
region = Rect2(24, 0, 8, 43)

[sub_resource type="AtlasTexture" id="AtlasTexture_8sq4i"]
atlas = ExtResource("2_64ctp")
region = Rect2(8, 0, 8, 43)

[sub_resource type="AtlasTexture" id="AtlasTexture_640wx"]
atlas = ExtResource("2_64ctp")
region = Rect2(40, 0, 8, 43)

[sub_resource type="AtlasTexture" id="AtlasTexture_a2258"]
atlas = ExtResource("2_64ctp")
region = Rect2(16, 0, 8, 43)

[sub_resource type="AtlasTexture" id="AtlasTexture_1xsix"]
atlas = ExtResource("2_64ctp")
region = Rect2(32, 0, 8, 43)

[sub_resource type="AtlasTexture" id="AtlasTexture_rftc2"]
atlas = ExtResource("2_64ctp")
region = Rect2(0, 0, 8, 43)

[sub_resource type="AtlasTexture" id="AtlasTexture_61f8s"]
atlas = ExtResource("2_64ctp")
region = Rect2(48, 0, 8, 43)

[sub_resource type="SpriteFrames" id="SpriteFrames_61f8s"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_64ctp")
}],
"loop": true,
"name": &"Balanced",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_8sq4i")
}],
"loop": true,
"name": &"BigRecharge",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_640wx")
}],
"loop": true,
"name": &"BigSpend",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_a2258")
}],
"loop": true,
"name": &"Recharge",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_1xsix")
}],
"loop": true,
"name": &"Spend",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_rftc2")
}],
"loop": true,
"name": &"UltraRecharge",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_61f8s")
}],
"loop": true,
"name": &"UltraSpend",
"speed": 5.0
}]

[sub_resource type="SpriteFrames" id="SpriteFrames_64ctp"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_640wx")
}],
"loop": true,
"name": &"Boost",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_a2258")
}],
"loop": true,
"name": &"Empty",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("5_1xsix")
}],
"loop": true,
"name": &"Freeze",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("5_a2258")
}],
"loop": true,
"name": &"Phase",
"speed": 5.0
}]

[node name="Hud" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_37p78")

[node name="TireCondition" type="Label" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0
text = "Tire Condition: "

[node name="TireType" type="Label" parent="."]
layout_mode = 0
offset_top = 26.0
offset_right = 76.0
offset_bottom = 49.0
text = "Tire Type:"

[node name="BatteryDisplay" type="Label" parent="."]
layout_mode = 0
offset_left = 1053.0
offset_top = 396.0
offset_right = 1119.0
offset_bottom = 419.0
text = "Battery: "

[node name="Timer" type="Label" parent="."]
layout_mode = 1
offset_left = 987.0
offset_right = 1139.0
offset_bottom = 23.0
text = "Current Time: 0.000"
vertical_alignment = 1

[node name="Laps" type="Label" parent="."]
layout_mode = 1
offset_left = 987.0
offset_top = 66.0
offset_right = 1139.0
offset_bottom = 89.0
text = "Lap 0/5"
horizontal_alignment = 2
vertical_alignment = 1

[node name="BestTime" type="Label" parent="."]
layout_mode = 1
offset_left = 989.0
offset_top = 33.0
offset_right = 1074.0
offset_bottom = 56.0
text = "among us"
horizontal_alignment = 2

[node name="SpendingType" type="Label" parent="."]
layout_mode = 0
offset_left = 4.0
offset_top = 309.0
offset_right = 139.0
offset_bottom = 332.0

[node name="Pit Condition" type="Label" parent="."]
layout_mode = 0
offset_top = 56.0
offset_right = 40.0
offset_bottom = 79.0
text = "In Pit
(Use left and right arrows to switch tires)"

[node name="StartCountdown" type="Label" parent="."]
layout_mode = 0
offset_left = 522.0
offset_top = 23.0
offset_right = 633.0
offset_bottom = 83.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 40
horizontal_alignment = 1
vertical_alignment = 1

[node name="Lights" type="AnimatedSprite2D" parent="."]
position = Vector2(1094, 283)
scale = Vector2(5, 5)
sprite_frames = SubResource("SpriteFrames_61f8s")
animation = &"BigRecharge"

[node name="ResetText" type="Label" parent="."]
layout_mode = 0
offset_left = 522.0
offset_top = 279.0
offset_right = 652.0
offset_bottom = 302.0
text = "(Press R to reset)"

[node name="Item1" type="AnimatedSprite2D" parent="."]
position = Vector2(983, 612)
sprite_frames = SubResource("SpriteFrames_64ctp")
animation = &"Empty"

[node name="Item2" type="AnimatedSprite2D" parent="."]
position = Vector2(1049, 612)
sprite_frames = SubResource("SpriteFrames_64ctp")
animation = &"Empty"

[node name="Item3" type="AnimatedSprite2D" parent="."]
position = Vector2(1115, 612)
sprite_frames = SubResource("SpriteFrames_64ctp")
animation = &"Empty"

[node name="VBoxContainer" type="VBoxContainer" parent="."]
z_index = 2
layout_mode = 0
offset_left = 441.0
offset_top = 299.0
offset_right = 740.0
offset_bottom = 561.0

[node name="Host" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 130
text = "Host"

[node name="Join" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 46
text = "Join"

[node name="LineEdit" type="LineEdit" parent="VBoxContainer"]
layout_mode = 2
placeholder_text = "Enter Player Name"
max_length = 15

[node name="IceOverlay" type="Sprite2D" parent="."]
modulate = Color(1, 1, 1, 0)
position = Vector2(555, 319)
scale = Vector2(1.64, 1)
texture = ExtResource("7_rftc2")

[node name="BeforeStartOverlay" type="Sprite2D" parent="."]

[node name="Background" type="Sprite2D" parent="."]
z_index = 1
position = Vector2(577, 322)
scale = Vector2(0.6, 0.6)
texture = ExtResource("8_61f8s")

[node name="Title" type="Label" parent="."]
z_index = 1
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0
theme_override_font_sizes/font_size = 191
text = "Party Racers"

[node name="StartRace" type="Button" parent="."]
layout_mode = 0
offset_left = 234.0
offset_top = 608.0
offset_right = 317.0
offset_bottom = 639.0
text = "StartRace"

[node name="SubViewportContainer" type="SubViewportContainer" parent="."]
layout_mode = 0
offset_left = 2.00003
offset_top = 433.0
offset_right = 514.0
offset_bottom = 945.0
scale = Vector2(0.42, 0.42)
mouse_filter = 2

[node name="SubViewport" type="SubViewport" parent="SubViewportContainer"]
handle_input_locally = false
render_target_update_mode = 4

[node name="Camera3D" type="Camera3D" parent="SubViewportContainer/SubViewport"]
transform = Transform3D(-1, 8.74228e-08, 3.82137e-15, 0, -4.37114e-08, 1, 8.74228e-08, 1, 4.37114e-08, 0, 1.062, 0)
environment = ExtResource("9_g10ll")

[node name="PlayerColorPicker" type="ColorPickerButton" parent="."]
z_index = 7
layout_mode = 0
offset_right = 89.0
offset_bottom = 29.0
text = "color picker"
color = Color(1, 1, 1, 1)

[node name="PlayerLabelColor" type="Label" parent="."]
z_index = 1
layout_mode = 0
offset_left = 112.0
offset_top = 5.0
offset_right = 199.0
offset_bottom = 28.0
text = "Player Label Color"

[connection signal="pressed" from="VBoxContainer/Host" to="." method="_on_host_pressed"]
[connection signal="pressed" from="VBoxContainer/Join" to="." method="_on_join_pressed"]
[connection signal="pressed" from="StartRace" to="." method="_on_start_race_pressed"]
